# tree-sitter-yap

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  fuzz.yml  lint.yml  publish.yml
bindings/c/: tree-sitter-yap.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_yap/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterYap/: yap.h
bindings/swift/TreeSitterYapTests/: TreeSitterYapTests.swift
examples/: grammar.yap  queue.yap
queries/: highlights.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
